# img2song

./: .gitignore  README.md  app.py  fetch_metadata.py  metadata.json  preprocess.py  preprocessor.py  pyproject.toml  requirements.txt  util.py
checkpoints/: clip_proj_heads_thumbnail_lyrics_10_epochs_20250613.pth  clip_proj_heads_thumbnail_lyrics_10_epochs_20250615.pth  clip_proj_heads_thumbnail_lyrics_10_epochs_20250616.pth  clip_proj_heads_thumbnail_lyrics_15_epochs_20250615.pth  clip_proj_heads_thumbnail_lyrics_20_epochs_20250615.pth  clip_proj_heads_thumbnail_lyrics_20_epochs_20250616.pth  clip_proj_heads_thumbnail_lyrics_30_epochs_20250616.pth  clip_proj_heads_thumbnail_lyrics_40_epochs_20250616.pth
clip_song_matcher/: config.py  dataset.py  main.py  model.py  recommender.py  train.py
clip_song_prepper/: embedder.py  fetch_metadata.py  image_captioner.py  main.py  preprocessor.py  token_checker.py  youtube_url_manager.py
core/: config.py  utils.py
data/: embeddings.npz  metadata.json  youtube_urls.json
img2mel/: config.py  img2mel.py  img2mel_net.py  model.py  preprocessor.py  train.py
img2story/: img2story.py
model/: emotion_extractor.py  img2mel.py  img2story.py  util.py
